grpc-asm/istio-ingressgateway/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: istio-ingressgateway-ingress
  namespace: asm-gateway
  annotations:
    kubernetes.io/ingress.global-static-ip-name: asm-ingress-ip
    networking.gke.io/managed-certificates: asm-cert
spec:
  defaultBackend:
    service:
      name: istio-ingressgateway
      port:
        number: 443
